# cautious-disco

./: .gitignore  LICENSE  README.md  gen_synth_data.js  pyproject.toml  synthetic_data.csv
src/app/: __init__.py  adaptive.py  algo_viz_comparison.py  core.py
